--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha tests/wordtest.js"
+    "test": "mocha --compilers js:babel-core/register tests/wordtest.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,11 @@
   "dependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
